# shuri

./: Cargo.toml  LICENSE
.github/workflows/: clippy.yml  lint.yml  tests.yml
fixtures/consensus/fork_choice/devnet/fc/test_attestation_processing/: test_attestation_accumulation_full_validator_set.json  test_attestation_superseding_same_validator.json  test_attestations_move_to_known_between_blocks.json  test_extended_chain_attestation_superseding_pattern.json  test_proposer_attestation_appears_in_latest_new.json  test_slot_gaps_with_attestation_superseding.json
fixtures/consensus/fork_choice/devnet/fc/test_attestation_target_selection/: test_attestation_target_advances_with_attestations.json  test_attestation_target_at_genesis_initially.json  test_attestation_target_justifiable_constraint.json  test_attestation_target_with_extended_chain.json  test_attestation_target_with_slot_gaps.json
spec-tests/: main.rs
spec-tests/common/: helpers.rs  hex_bytes.rs  mod.rs  schema.rs
spec-tests/state_transition/: mod.rs  runner.rs  schema.rs
spectests/: main.rs
spectests/common/: hex_bytes.rs  schema.rs
spectests/state_transition/: runner.rs
src/: lib.rs
src/chain/: config.rs
src/containers/: attestation.rs  block.rs  checkpoint.rs  config.rs  mod.rs  slot.rs  state.rs  validator.rs
src/crypto/: mod.rs  xmss.rs
src/forkchoice/: mod.rs  store.rs  tests.rs
tests/: test_state_transition.rs
tests/helpers/: hex_bytes.rs  mod.rs  schema.rs
tests/schema/: mod.rs  state_transition.rs
(+28 files in other folders)
