[package]
name = "shuri"
version = "0.1.0"
edition = "2024"

[dependencies]
libssz = "0.2.1"
libssz-derive = "0.2.1"
libssz-merkle = "0.2.1"
libssz-types = "0.2.1"
thiserror = "2.0.18"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
similar-asserts = "2.0"

[[test]]
name = "spectests"
path = "spectests/main.rs"
harness = false
